<resources>
    <string name="app_name">KFC Pickup</string>
    <string name="title_activity_leer_qr">LeerQr</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="qr">Leer QR</string>
    <string name="waitQR">ESTAMOS CONSULTANDO....</string>
    <string name="configuracion">CONFIGURE IP Y CODIGO DE TIENDAD</string>
    <string name="title_activity_informacion">Ordenes Pickup</string>
    <string name="titlePickUp">Datos del Pedido</string>
    <string name="Cliente">CLIENTE:</string>titleDireccion
    <string name="titleDireccion">DIRECCIÓN</string>
    <string name="titleTelefono">TELEFONO:</string>
    <string name="titleEmail">CORREO ELECTRONICO: </string>
    <string name="titleCedula">CÉDULA O RUC:</string>
    <string name="titleFactura">ORDEN NRO.: </string>
    <string name="titleQR">TOQUE LA PANTALLA.... </string>
    <string name="titlebusqueda">Escoja una opción de búsqueda </string>
    <string name="Subtotal">Sub Total:</string>
    <string name="Iva">Iva:</string>
    <string name="toal">Total:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cerrar">CERAR</string>
    <string name="cantidad">Cantidad</string>
    <string name="producto">PRODUCO</string>
    <string name="detalle">DETALLE DE COMPRA</string>
    <string name="resumen">RESUMEN DE COMPRA</string>


    <string name="title_sync">ENTREGAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_app">BÚSQUEDAS</string>
    <string name="search_estado">Estado</string>
    <string name="search_cliente">Cliente</string>
    <string name="clienteid">Cliente : </string>
    <string name="identificacioC">Identificación : </string>
    <string name="codigoApp">Código App : </string>
    <string name="search">Buscar</string>
    <string name="estado0">Entregado</string>
    <string name="estado1">Preparando</string>
    <string name="error1">ERROR EN EL RESTAURANTE</string>
    <string name="estado2">Rechazado</string>
    <string name="estado3">Rechaza Resta.</string>
    <string name="estado4">Registrado</string>
    <string name="estado5">Recibido</string>
    <string name="varities">Resultados</string>
    <string name="pedido">---</string>
    <string name="ChooseSearch">Escoja una opción para la búsqueda</string>
    <string name="noChooseSearch">No hay resultados</string>
    <string name="titleShippingLabel">Código App: </string>
    <string name="titleCreatedLabel">Tipo de pago : </string>
    <string name="deliveryDateLabel">Hora Pedido :</string>
    <string name="pickupDateLabel">Hora PickUp :</string>
    <string name="detailsLabel">Estado : </string>
    <string name="error">El valor total enviado  o la suma de las Formas de Pago, no coinciden con el valor calculado. El valor total enviado  o la suma de las Formas de Pago, no coinciden con el valor calculado</string>
    <string name="dataP">Datos de pedido</string>
    <string name="codigoApp_P">---</string>
    <string name="restaurante">Restaurante :</string>
    <string name="codigoRest_P">---</string>
    <string name="tipoServicio">Tipo de Servicio</string>
    <string name="tipoServicio_P">---</string>
    <string name="tipoPickUp">Tipo pickup :</string>
    <string name="tipoPickUp_P">---</string>
    <string name="detalleP">Detalle</string>
    <string name="dataCP">Datos de Cliente</string>
    <string name="nombreCP">Nombre :</string>
    <string name="nombreCPE">---</string>
    <string name="direccionCP">Dirección :</string>
    <string name="direccionCPE">---</string>
    <string name="emailCP">Email :</string>
    <string name="emailCPE">---</string>
    <string name="cellCP">Teléfono :</string>
    <string name="cellCPE">---</string>
    <string name="pagoP">Pago</string>
    <string name="pagoV">Valor :</string>
    <string name="pagoVE">---</string>
    <string name="binV">BIn :</string>
    <string name="binVE">---</string>
    <string name="acctP">Autorizaciones de pago</string>
    <string name="spaceDatail">Espacio para el detalle del pedido</string>
    <string name="factura">Factura :</string>
    <string name="numero_id_factura">Número ID factura</string>
    <string name="hora_pickup">Hora Pickup</string>
    <string name="hora_id_pickup">2021-01-12 20:30:00</string>
    <string name="facturaP">Impresiones de factura</string>
    <string name="FacturaDP">Impresiones de órden de pedido</string>
    <string name="ordenSP">Órden sin procesar</string>
    <string name="FacturaG">Factura Generada</string>
    <string name="noSeEncontroF">NO SE ENCONTRÓ PEDIDO EN EL LOCAL</string>
    <string name="noSeEncontroFac">NO SE ENCONTRÓ CABECERA DE FACTURA</string>
    <string name="FechaFac">Fecha :</string>
    <string name="EstacionFac">Estación :</string>
    <string name="ImpresoraFac">Impresora :</string>
    <string name="EstadoFac">Estado :</string>
    <string name="fecha_impresion_p">---</string>
    <string name="estacion_factura_p">---</string>
    <string name="estado_factura_p">---</string>
    <string name="impresora_factura_p">---</string>
    <string name="FechaOrden">Fecha :</string>
    <string name="fecha_orden_p">---</string>
    <string name="EstacionOrden">Estación :</string>
    <string name="estacion_orden_p">---</string>
    <string name="EstadoOrden">Estado :</string>
    <string name="estado_orden_p">---</string>
    <string name="impresora_orden_p">---</string>
    <string name="ImpresoraOrden">Impresora</string>
    <string name="noweb">No se pudo abrir la dirección WEB</string>
    <string name="erroNoData">!ERROR¡ No se pudo cargar los datos</string>
    <string name="codigoP">Código :</string>
    <string name="codigo_p_respuesta">---</string>
    <string name="mensajeP">Mensaje respuesta :</string>
    <string name="mensaje_p_respuesta">---</string>
    <string name="tarjetaHP">Tarjetahabiente :</string>
    <string name="tarjetah_p_respuesta">---</string>
    <string name="pasarelaP">Pasarela pago :</string>
    <string name="pasarela_p_respuesta">---</string>
    <string name="tipoTP">Tipo tarjeta :</string>
    <string name="tipotarjeta_p_respuesta">---</string>
    <string name="FechaP">Fecha - Hora :</string>
    <string name="fechahora_p_respuesta">---</string>
    <string name="pluDetalle">PLU</string>
    <string name="modifDetalle">MODIF</string>
    <string name="nombreDetalle">NOMBRE</string>
    <string name="cantidadDetalle">CANTIDAD</string>
    <string name="plu_valor">---</string>
    <string name="modif_valor">---</string>
    <string name="nombre_valor">---</string>
    <string name="cantidad_valor">---</string>
    <string name="numFac">Nro.Fac</string>
    <string name="numTotal">Total</string>
    <string name="numIva">Iva</string>
    <string name="numSub">Sub. Total</string>
</resources>