<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AlertDialog.AppCompat"
    tools:context=".Activities.Informacion"
    android:orientation="vertical">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fadeScrollbars="true" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_weight="1"

        android:background="@color/white">


        <TextView
            android:id="@+id/titleSubTotal"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/lista"

            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/Subtotal"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="NotSibling,RtlCompat" />


        <TextView
            android:id="@+id/lblSubtotal"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/titleSubTotal"
            android:layout_marginStart="85dp"
            android:layout_marginTop="0dp"
            android:text="TextView"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/titleIva"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleSubTotal"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/Iva"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/lblIva"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/titleIva"
            android:layout_marginStart="85dp"
            android:layout_marginTop="0dp"
            android:text="TextView"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/titleTotal"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleIva"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/toal"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/titleTotal"
            android:layout_marginStart="85dp"
            android:layout_marginTop="0dp"
            android:text="TextView"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>